; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/clipbrd/extr_winutils.c_RealizeClipboardPalette.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/clipbrd/extr_winutils.c_RealizeClipboardPalette.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CF_PALETTE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@GDI_ERROR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RealizeClipboardPalette(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* @CF_PALETTE, align 4
  %8 = call i32 @IsClipboardFormatAvailable(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %2, align 4
  br label %39

12:                                               ; preds = %1
  %13 = load i32, i32* @CF_PALETTE, align 4
  %14 = call i32 @GetClipboardData(i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %12
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* %2, align 4
  br label %39

19:                                               ; preds = %12
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @FALSE, align 4
  %23 = call i32 @SelectPalette(i32 %20, i32 %21, i32 %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %28, label %26

26:                                               ; preds = %19
  %27 = load i32, i32* @FALSE, align 4
  store i32 %27, i32* %2, align 4
  br label %39

28:                                               ; preds = %19
  %29 = load i32, i32* %3, align 4
  %30 = call i64 @RealizePalette(i32 %29)
  %31 = load i64, i64* @GDI_ERROR, align 8
  %32 = icmp ne i64 %30, %31
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %4, align 4
  %34 = load i32, i32* %3, align 4
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* @FALSE, align 4
  %37 = call i32 @SelectPalette(i32 %34, i32 %35, i32 %36)
  %38 = load i32, i32* %4, align 4
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %28, %26, %17, %10
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @IsClipboardFormatAvailable(i32) #1

declare dso_local i32 @GetClipboardData(i32) #1

declare dso_local i32 @SelectPalette(i32, i32, i32) #1

declare dso_local i64 @RealizePalette(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
